| Summary: | ASTERISK-26482: [patch] chan_pjsip: segfault on already disconnected session | ||
| Reporter: | Alexei Gradinari (alexei gradinari) | Labels: | |
| Date Opened: | 2016-10-18 08:58:39 | Date Closed: | 2016-10-27 19:27:31 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 13.11.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) bt_answer.txt ( 1) bt_indicate.txt ( 2) bt_update_connected_line_information.txt | |
| Description: | On heavy loaded system the TCP/TLS incoming calls could be
disconnected by pjproject while these calls are being processed by asterisk. Need to use functions pjsip_inv_add_ref/pjsip_inv_dec_ref to inform pjproject that an INVITE session is in use. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-10-18 08:58:40.675-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||